--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	
 	</header>
 
-	<section  id= "corps">
+	<section  class= "corps">
 		<div>
 			<img id="logo" src="images/elgoog.png" alt="elgoog logo">
 			<div id="france">ecnarF</div>
@@ -39,8 +39,11 @@
 			<input id= "rech" type="button" value="Recherche Elgoog">
 			<input id= "lucky" type="button"  value="J'ai de la chance">
 		</div>
-	</section>
 
+	</section >
+<div  id= "section_bouton" class= "corps">
+	<input  id="central" type="button" value="AFFICHER LES ELEMENTS CENTRAUX">
+</div>
 	<footer>
 		<nav>
 			<ul id="footer_left">
@@ -50,9 +53,11 @@
 			</ul>
 			<ul id="footer_right">
 				<li><a href="https://www.google.fr/intl/fr/policies/privacy/?fg=1" class="underline">Confidentialité</a></li>
-				<li><a href="https://www.google.fr/intl/fr/policies/terms/?fg=1" class="underline">Conditions</a></li>					<li><a href="https://www.google.fr/preferences?hl=fr" class="underline">Paramètres</a></li>
+				<li><a href="https://www.google.fr/intl/fr/policies/terms/?fg=1" class="underline">Conditions</a></li>					
+				<li><a href="https://www.google.fr/preferences?hl=fr" class="underline">Paramètres</a></li>
 			</ul>
 		</nav>
 	</footer>
+	<script src="main.js"> </script>
 </body>
 </html>
