tableau pas fini

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<footer>
 		<nav>
 			<ul id="footer_left">
-				<li><a href="https://www.google.fr/intl/fr/ads/?fg=1" class="underline">Publicité</a></li>
+				<li><a href="page2.html" class="underline">Publicité</a></li>
 				<li><a href="https://www.google.fr/services/?fg=1" class="underline">Entreprise</a></li>
 				<li><a href="https://www.google.fr/intl/fr/about.html?fg=1" class="underline">À propos</a></li>
 			</ul>
