Update title html page

--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="UTF-8">
-	<title>Page 2</title>
+	<title>Dynamic tab</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
